# api/docs/swagger.yaml
@@ -1,11 +1,11 @@
 basePath: /
 definitions:
-  main.RecognizeResponse:
+  handler.RecognizeResponse:
     properties:
       matched_image:
         type: string
       method:
-        description: '"ml" yoki "hash"'
+        description: '"ml" or "hash"'
         type: string
       processing_time_ms:
         type: integer
@@ -116,7 +116,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/main.RecognizeResponse'
+            $ref: '#/definitions/handler.RecognizeResponse'
         "400":
           description: Bad Request
           schema:
